# learn_gfx_2d

./: Cargo.toml  LICENSE  README.md
examples/bouncing_kitten/: README.md
examples/kitten_bouncing/: README.md
examples/kitten_bouncing/src/: main.rs
examples/kitten_bouncing/src/shaders/: sprite_frag.glsl  sprite_vert.glsl
examples/kitten_keyboard/: README.md
examples/kitten_keyboard/src/: input.rs  main.rs
examples/square_elements/: README.md
examples/square_elements/src/: main.rs
examples/square_elements/src/shaders/: frag.glsl
examples/square_interpolated/: README.md
examples/square_interpolated/src/: main.rs
examples/triangle_basic/shaders/: vert.glsl
examples/triangle_basic/src/: main.rs
examples/triangle_flashing/: README.md
examples/triangle_flashing/src/: main.rs
examples/triangle_flashing/src/shaders/: vert.glsl
examples/triangle_interpolated/: README.md
examples/triangle_interpolated/src/: main.rs
src/: main.rs
